# ricci_cli

./: Cargo.toml  README.md  build.rs  env.example  install-completion.ps1  install-completion.sh  install-context-menu-wt.ps1  install-context-menu.ps1  plan_20250715_023111.md  ricci-setup.bat  uninstall-context-menu.ps1
assets/: README.md
examples/: code_modification_example.rs  sample_logs.txt
src/: cli.rs  lib.rs  main.rs  splash.rs
src/analyzer/: complexity.rs  dependencies.rs  mod.rs  structure.rs  types.rs
src/api/: client.rs  mod.rs
src/assistant/: file_modifier.rs  mod.rs  review.rs  types.rs
src/config/: loader.rs  mod.rs  types.rs  validators.rs
src/handlers/: analysis.rs  chat.rs  code_assistant.rs  command.rs  completion.rs  config.rs  mod.rs
src/planner/: formatter.rs  mod.rs  types.rs
src/renderer/: markdown.rs  mod.rs
