[package]
name = "ricci-cli"
version = "0.1.0"
edition = "2021"
authors = ["NH Bank Incident Response Team"]
description = "농협은행 장애 대응 CLI - 리만 기하학의 Ricci 텐서처럼 시스템의 비정상 곡률을 감지"
license = "MIT"
keywords = ["monitoring", "incident-response", "cli", "nh-bank"]

[[bin]]
name = "ricci"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
rustyline = "13.0"
rustyline-derive = "0.10"
tokio = { version = "1.35", features = ["full"] }

# OpenAI API
async-openai = "0.18"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# 모니터링
sysinfo = "0.30"

# 로그 분석
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
nom = "7.1"

# 데이터 시각화 (TUI)
ratatui = "0.25"
crossterm = "0.27"
tui-textarea = "0.4"

# 네트워크 진단
dns-lookup = "2.0"

# 직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# 로깅 및 에러 처리
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# 유틸리티
colored = "2.1"
indicatif = "0.17"
humantime = "2.1"
byte-unit = "5.0"
directories = "5.0"
dotenv = "0.15"
rand = "0.8"
dirs = "5.0"
toml = "0.8"
walkdir = "2.4"

# 렌더링
syntect = "5.0"
termimad = "0.23"
prettytable-rs = "0.10"

# 비동기 런타임
tokio-stream = "0.1"
futures = "0.3"

# 보고서 생성
tera = "1.19"
minijinja = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"
