[package]
name = "ricci-cli"
version = "0.1.0"
edition = "2021"
authors = ["NH Bank Incident Response Team"]
description = "농협은행 장애 대응 CLI - 리만 기하학의 Ricci 텐서처럼 시스템의 비정상 곡률을 감지"
license = "MIT"
keywords = ["monitoring", "incident-response", "cli", "nh-bank"]

[[bin]]
name = "ricci"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
rustyline = "13.0"
tokio = { version = "1.35", features = ["full"] }

# OpenAI API
async-openai = "0.18"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# 로그 분석
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

# 직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# 에러 처리
anyhow = "1.0"
thiserror = "1.0"

# 유틸리티
colored = "2.1"
dotenv = "0.15"
walkdir = "2.4"
dirs = "5.0"
toml = "0.8"
figlet-rs = "0.1"

# CLI 인터랙션
dialoguer = "0.11"
similar = "2.3"

# 렌더링
syntect = "5.0"
termimad = "0.23"
prettytable-rs = "0.10"

# 비동기 런타임
futures = "0.3"



[build-dependencies]
chrono = "0.4"

[features]
default = []
auto-complete = []
